@@ -599,6 +599,9 @@ Trunk -  Unreleased
     HIVE-1844 Hanging hive client due to OOM error
     (He Yongqiang via namit)
 
+    HIVE-1843 Add an option in dynamic partition inserts to throw an error if
+    0 partitions are created (Ning Zhang via namit)
+
   TESTS
 
     HIVE-1464. improve  test query performance
